--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
                     <li><a class="ancla1 item" href="./" >HOME </a></li>
                     <li><a class="ancla2 item" href="works.html" >WORKS</a></li>
                     <li><a class="ancla3 item selected" href="skills.html" >SKILLS</a></li>
-                    <li><a class="ancla4 item" href="#contacto">CONTACT</a></li>
+                    <li><a class="ancla4 item" href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <div class="links">
