--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                             <textarea name="message" id="-message" rows="5"></textarea>
                         </p>
                         <p>
-                            <button type="submit" name="submit">ENVIAR</button>
+                            <button type="button" name="submit">ENVIAR</button>
                         </p>
                     </form>
                 </div>
